# devpost-validator

./: README.md  pyproject.toml  requirements.txt
examples/: custom_plugin_example.py  project_structure_plugin.py
src/devpost_validator/: __init__.py  ai_detector.py  cli.py  code_analyzer.py  commit_analyzer.py  config_manager.py  core.py  devpost_analyzer.py  github_analyzer.py  plagiarism_checker.py  plugin_base.py  plugin_utils.py  report_generator.py  rule_engine.py  secret_analyzer.py  team_analyzer.py  technology_analyzer.py
